Fixed sort button height on mobile

--- a/src/app/component/results/sort/sort.component.scss
+++ b/src/app/component/results/sort/sort.component.scss
@@ -62,7 +62,7 @@ span.align-left.hide-mobile {
     mat-form-field.mat-form-field {
         width: 100%;
         border-radius: 0.25rem;
-        height: 46px;
+        height: 53px;
         display: flex;
         justify-content: center;
         align-items: center;
